--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
         "build": "remix build",
         "db": "mongod --dbpath ../dbdata/ --replSet=rs0",
         "dev": "remix dev",
-        "start": "remix-serve build"
+        "start": "cross-env NODE_ENV=production netlify dev"
     },
     "dependencies": {
         "@prisma/client": "^4.6.1",
+        "@netlify/functions": "^1.3.0",
+        "@remix-run/netlify": "^1.7.5",
         "@remix-run/node": "^1.7.5",
         "@remix-run/react": "^1.7.5",
-        "@remix-run/serve": "^1.7.5",
         "bcryptjs": "^2.4.3",
         "isbot": "^3.5.4",
         "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "devDependencies": {
         "@remix-run/dev": "^1.7.5",
         "@remix-run/eslint-config": "^1.7.5",
+        "@remix-run/serve": "^1.7.5",
         "eslint": "^8.23.1",
         "prisma": "^4.6.1"
     },
